# athena-nexus

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.bolt/: mcp.json
extra/: athena-nexus.desktop
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/registry/: tools.json  tools.yaml
src-tauri/src/: kv.rs  main.rs
src-tauri/src/audit/: commands.rs  mod.rs
src-tauri/src/config/: commands.rs  mod.rs  user_tools.rs
src-tauri/src/container/: commands.rs  mod.rs
src-tauri/src/deploy/: cancel.rs  commands.rs  mod.rs
src-tauri/src/health/: commands.rs
src-tauri/src/registry/: commands.rs  mod.rs
src-tauri/src/snapshot/: commands.rs  mod.rs
src-tauri/src/vault/: commands.rs  mod.rs
src/components/: CategoryModal.css  CategoryModal.jsx  ConnectionBanner.css  ConnectionBanner.jsx  DeployModal.css  DeployModal.jsx  DraggableGrid.css  DraggableGrid.jsx  LogDrawer.css  LogDrawer.jsx  Sidebar.css  Sidebar.jsx  ThemedSelect.css  ThemedSelect.jsx  ToolCard.css  ToolCard.jsx  TopBar.css  TopBar.jsx
src/context/: ContainerContext.jsx  DeployContext.jsx  NavigationContext.jsx
src/hooks/: useCardOrder.js  usePoll.js  useRegistry.js
src/lib/: container.js  diagnoseError.js  imageUtils.js  mockData.js
src/pages/: AuditPage.css  AuditPage.jsx  Dashboard.css  Dashboard.jsx  NetworkTopology.css  NetworkTopology.jsx  PlaceholderPage.css  PlaceholderPages.jsx  PreflightPage.css  PreflightPage.jsx  RegistryPage.css  RegistryPage.jsx  SettingsPage.css  SettingsPage.jsx  (+6 more)
(+1 files in other folders)
